feat: 입력수에 대한 결과를 반환하는 기능